--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               
             ],
             "styles": [
+               "node_modules/ngx-spinner/animations/ball-spin.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css", 
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
