--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^19.0.0",
     "ngx-owl-carousel-o": "^18.0.1",
+    "ngx-spinner": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
