--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@angular/service-worker": "^18.2.0",
+    "@angular/service-worker": "^18.2.14",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^18.1.2",
     "ngx-owl-carousel-o": "^18.0.0",
     "ngx-spinner": "^18.0.0",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.1",
     "zone.js": "^0.14.10"
